6.k8s-related/ingresses/practices/nginx-dpl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: nginx-app
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      app: nginx-app
  # define the pods spec here 
  template: 
    metadata: 
      labels: 
        app: nginx-app 
    spec: 
      containers: 
        - name: nginx-cont 
          image: nginx:latest
          ports: 
            - containerPort: 80
