6.k8s-related/ingresses/practices/reactjs-dpl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: reactjs-app 

spec: 
  replicas: 4 
  selector: 
    matchLabels: 
      app: reactjs-app
  template: 
    metadata: 
      labels: 
        app: reactjs-app 
    spec: 
      containers: 
        - name: reactjs-cont 
          image: 69966/reactjs-jenkins-nginx:v0.0.11
          ports: 
           - containerPort: 80
