6.k8s-related/ingresses/practices/reactjs-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: reactjs-service
spec: 
  type: ClusterIP 
  selector: 
    app: reactjs-app
  ports: 
    - name: reactjs-port
      targetPort: 80
      port: 3000
