6.k8s-related/ingresses/practices/both-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata: 
  name: both-ingress
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

# a single sub domain 
# domain/nginx
# domain/reactjs
# using regex 

spec: 
  ingressClassName: "nginx"
  tls: 
    - hosts: 
        - "k8s-nginx.devnerd.store"
        - "k8s-reactjs.devnerd.store"
      secretName: both-ingress-tls
  rules: 
    - host: k8s-nginx.devnerd.store 
      http: 
        paths: 
          - pathType: Prefix 
            path: "/"
            backend: 
              service: 
                name: nginx-service
                port: 
                  number: 80 
    - host: k8s-reactjs.devnerd.store
      http: 
        paths: 
          - pathType: Prefix
            path: "/"
            backend: 
              service: 
                name: reactjs-service
                port: 
                  number: 3000
