6.k8s-related/ingresses/practices/paths-ingress.yaml
#  This file is an experimentations 
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata: 
  name: both-ingress
  annotations: 
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # this is the configuration for the reactjs 
          # try_files $uri $uri/ /index.html
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   if ($request_uri ~* "/reactjs/(.*)") {
    #     add_header Cache-Control "no-store, no-cache, must-revalidate";
    #   }
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec: 
  ingressClassName: "nginx"
  tls: 
    - hosts: 
        - "k8s-nginx.devnerd.store"
  #       # - "k8s-reactjs.devnerd.store"
      secretName: both-ingress-tls
  rules: 
    - host: k8s-nginx.devnerd.store 
      http: 
        paths: 
          - path: /reactjs(/|$)(.*)
            pathType: Prefix 
            backend: 
              service: 
                name: reactjs-service
                port: 
                  number: 3000
          - path: /nginx(/|$)(.*)
            pathType: Prefix 
            backend: 
              service: 
                name: nginx-service
                port: 
                  number: 80 
    # - host: k8s-reactjs.devnerd.store
    #   http: 
    #     paths: 
    #       - pathType: Prefix
    #         path: "/"
    #         backend: 
    #           service: 
    #             name: reactjs-service
    #             port: 
    #               number: 3000
